--- a/app/src/main/res/layout/viewholder_hazard.xml
+++ b/app/src/main/res/layout/viewholder_hazard.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="@dimen/two_line_list_item_height"
     android:background="?attr/selectableItemBackground"
-    android:focusable="true"
     android:clickable="true"
-    android:layout_height="@dimen/two_line_list_item_height">
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/list_item_icon"
@@ -20,21 +20,25 @@
 
     <TextView
         android:id="@+id/list_item_title"
-        style="@style/TextAppearance.MaterialComponents.Subtitle1"
+        style="@style/ListItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/list_item_margin"
         android:layout_marginTop="@dimen/list_item_margin"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/list_item_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Aasimar" />
 
     <TextView
         android:id="@+id/list_item_caption"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/Caption"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
+        android:layout_marginEnd="@dimen/list_item_margin"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
         tools:text="Aasimar" />
