--- a/app/src/main/res/layout/bottomsheet_encounter.xml
+++ b/app/src/main/res/layout/bottomsheet_encounter.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/encounter_name"
+        style="@style/Headline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
+        tools:text="Encounter for Runeterra"
+        android:textColor="?colorOnSurface" />
 
     <TextView
         android:id="@+id/print_encounter"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/Caption"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:background="?selectableItemBackground"
@@ -23,7 +38,7 @@
 
     <TextView
         android:id="@+id/delete_encounter"
-        style="@style/TextAppearance.MaterialComponents.Caption"
+        style="@style/Caption"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:background="?selectableItemBackground"
