--- a/app/src/main/res/layout/fragment_encounters.xml
+++ b/app/src/main/res/layout/fragment_encounters.xml
@@ -1,84 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/encounter_creation_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="4dp">
 
     <TextView
         android:id="@+id/character_information_label"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
+        style="@style/Headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/label_character_information"
+        android:text="@string/label_encounter_data"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_level_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/character_level_edit_text_layout"
+            style="@style/EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:hint="@string/character_level"
-        android:inputType="number"
-        app:layout_constraintEnd_toStartOf="@id/character_number_edit_text"
+            app:layout_constraintEnd_toStartOf="@id/character_number_edit_text_layout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_information_label" />
+            app:layout_constraintTop_toBottomOf="@id/character_information_label">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/character_number_edit_text"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/character_level_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/character_level"
+                android:inputType="number" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/character_number_edit_text_layout"
+            style="@style/EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:hint="@string/number_of_characters"
-        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/character_level_edit_text"
-        app:layout_constraintTop_toBottomOf="@id/character_information_label" />
+            app:layout_constraintStart_toEndOf="@id/character_level_edit_text_layout"
+            app:layout_constraintTop_toBottomOf="@id/character_information_label">
 
-    <TextView
-        android:id="@+id/difficulty_label"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/encounter_target_difficulty_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/character_level_edit_text" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/character_number_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/number_of_characters"
+                android:inputType="number" />
 
-    <Spinner
-        android:id="@+id/difficulty_spinner"
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/difficulty_select_layout"
+            style="@style/DropDown"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@id/difficulty_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/character_number_edit_text"
-        app:layout_constraintTop_toTopOf="@id/difficulty_label" />
+            android:layout_marginTop="8dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/character_level_edit_text_layout"
+            app:layout_constraintStart_toStartOf="@id/character_level_edit_text_layout"
+            app:layout_constraintTop_toBottomOf="@id/character_level_edit_text_layout">
+
+            <AutoCompleteTextView
+                android:id="@+id/difficulty_select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/encounter_target_difficulty_label" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/start_button"
+        style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:enabled="false"
         android:text="@string/create_encounter"
         app:icon="@drawable/ic_create"
-        android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/difficulty_label" />
+        app:layout_constraintTop_toTopOf="@id/difficulty_select_layout"
+        app:layout_constraintBottom_toBottomOf="@id/difficulty_select_layout" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/encounter_label"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
+        style="@style/Headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/label_character_information"
+        android:text="@string/label_encounters"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/start_button" />
+        app:layout_constraintTop_toBottomOf="@id/encounter_creation_layout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/encounter_recycler_view"
@@ -87,9 +113,9 @@
         android:orientation="vertical"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@id/encounter_label"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/encounter_label"
         tools:itemCount="5"
         tools:listitem="@layout/viewholder_saved_encounter" />
 
