--- a/app/src/main/res/layout/fragment_hazards.xml
+++ b/app/src/main/res/layout/fragment_hazards.xml
@@ -22,8 +22,7 @@
         android:id="@+id/filter_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?colorSurface"
-        android:elevation="4dp"
+        style="@style/BottomSheet"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <View
@@ -35,17 +34,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/search_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_edit_text_layout"
+            style="@style/EditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:hint="@string/monster_search"
             app:layout_constraintEnd_toStartOf="@+id/navigate_up"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/monster_search" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
             android:id="@+id/navigate_up"
@@ -55,12 +61,12 @@
             android:clickable="true"
             android:contentDescription="@string/scroll_up_description"
             android:focusable="true"
-            android:foreground="?selectableItemBackground"
+            android:background="?selectableItemBackgroundBorderless"
             android:padding="8dp"
             android:src="@drawable/ic_arrow_up"
-            app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
+            app:layout_constraintBottom_toBottomOf="@id/search_edit_text_layout"
             app:layout_constraintEnd_toStartOf="@id/navigate_down"
-            app:layout_constraintTop_toTopOf="@id/search_edit_text" />
+            app:layout_constraintTop_toTopOf="@id/search_edit_text_layout" />
 
         <ImageView
             android:id="@+id/navigate_down"
@@ -70,23 +76,23 @@
             android:clickable="true"
             android:contentDescription="@string/scroll_down_description"
             android:focusable="true"
-            android:foreground="?selectableItemBackground"
+            android:background="?selectableItemBackgroundBorderless"
             android:padding="8dp"
             android:src="@drawable/ic_arrow_down"
-            app:layout_constraintBottom_toBottomOf="@id/search_edit_text"
+            app:layout_constraintBottom_toBottomOf="@id/search_edit_text_layout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/search_edit_text" />
+            app:layout_constraintTop_toTopOf="@id/search_edit_text_layout" />
 
         <TextView
             android:id="@+id/level_slider_label"
-            style="@style/TextAppearance.MaterialComponents.Caption"
+            style="@style/Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/monster_level_range"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text" />
+            app:layout_constraintTop_toBottomOf="@id/search_edit_text_layout" />
 
         <io.apptik.widget.MultiSlider
             android:id="@+id/level_slider"
@@ -95,7 +101,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toStartOf="@id/category_spinner"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/level_slider_label"
             app:scaleMax="25"
@@ -103,24 +109,25 @@
             app:scaleStep="1"
             app:thumbNumber="2" />
 
-        <TextView
-            android:id="@+id/sort_by_label"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/category_select_layout"
+            style="@style/DropDown"
+            android:layout_width="match_parent"
+            android:layout_marginTop="8dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="@string/monster_sort_by"
-            app:layout_constraintBaseline_toBaselineOf="@id/level_slider_label"
-            app:layout_constraintBottom_toTopOf="@id/category_spinner"
-            app:layout_constraintStart_toStartOf="@id/category_spinner" />
-
-        <Spinner
-            android:id="@+id/category_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            app:layout_constraintBottom_toBottomOf="@id/level_slider"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/level_slider" />
+            app:layout_constraintStart_toStartOf="@id/navigate_up"
+            app:layout_constraintTop_toBottomOf="@id/level_slider">
+
+            <AutoCompleteTextView
+                android:id="@+id/category_select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/hazard_complexity" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
