--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="1190.6976"
+    android:viewportHeight="1190.6976">
+    <group
+        android:translateX="339.34885"
+        android:translateY="339.34885">
+        <path
+            android:pathData="M188.8,20.38c-5.3,26.85 4.6,55.74 34.1,86.52 11.2,-7.29 31.6,-10.94 50,-8.16 -46,-22.31 -66.5,-47.13 -84.1,-78.36zM29.19,26.62C43.56,73.08 81.09,128.8 129.6,168.3 93.51,166 49.93,153.1 18.76,143c24.96,35.2 64.17,52.9 103.34,66.3C97.13,227 66.99,245 18.66,248c54.64,19.2 107.54,8.9 131.34,0.7 -17.9,34.9 -100.72,66.2 -122.31,77 53.26,4.2 121.71,-11 167.01,-32.9 10,24.6 -1.6,53.2 -10.1,77.8 -1.9,4.5 -3.8,8.9 -5.7,13.3 5.1,-3.5 10.1,-7 14.9,-10.6 23.6,-16.2 47.8,-31.9 59.5,-58.8 26.1,31.2 62.7,62.1 107,85.4 17.4,22.1 28.3,49 34.2,73.8 8.3,-19.1 13.8,-40.2 9.7,-60.3 24.5,-3.6 35.6,-29.7 35.5,-54.4 -12.6,6.2 -15.1,6.3 -31.2,8.2 0,-10.1 0.6,-12.5 -3,-28.7 -10.3,8.4 -21,11.2 -30.8,11.8 2.1,-7.6 3,-19.5 3.7,-27.3 -13,7.1 -19.2,9.7 -30.1,10.8 -0.4,-10.9 -0.1,-20 -4.1,-30.4 -29.6,19 -48.6,1.5 -68,-21.3 19.8,-17 96.4,-21.8 95.1,7.1 14,-7.3 18.8,-11.2 23.6,-15.9 9.1,8.5 13.4,20.9 15.1,31.4 9.3,-9.4 10.3,-10.5 17.1,-23.8 5.7,10.1 8.8,17 10.7,30.6 8.5,-6.2 15.4,-13.1 19.8,-21.4 7.5,15.5 8.3,16 12.4,33 17.8,-13.1 21.8,-31.2 22.8,-47.6 2,-33 -0.3,-108.2 -31,-142.9 1.7,36.3 -13.1,70 -33.8,80.7 -12.6,4.9 -96.5,-74.6 -137.6,-93.3 -23.5,-10.2 -48.1,7.1 -67.8,9.3C147,106.2 83.57,70.94 29.19,26.62zM296.1,152.8c13.3,20.9 32.2,36.9 60.1,55 -19.4,2.9 -65.8,-6.7 -77.7,-24 -5.5,-7.9 7.1,-21.3 17.6,-31zM180.6,319.1c-14.4,6.2 -29.2,10.9 -43.8,14.3 -2.4,3.6 -4.6,7.1 -6.7,10.5 14.8,5.3 31.5,7 44.1,2.8 3.3,-9.8 5.5,-19.3 6.4,-27.6zM112.6,338.2l-10.2,1.5c-31.81,36.6 -61.9,103.2 -48.24,151.9h36.13c-11.12,-37.7 -16.53,-87.1 22.31,-153.4zM121.1,359.7c-5.9,11.4 -10.4,22.1 -13.8,32.1 12.9,6.7 29.1,8.9 44.8,8.2 4.6,-10.5 9.8,-21.8 14.6,-33.3 -15.4,1.8 -31.4,-1.4 -45.6,-7zM232.5,366.3c-12,10.5 -25.2,20.3 -38.9,29.6 7,34 33.4,63.4 73.9,95.7h83.3c-57.2,-31.8 -94.6,-73.3 -118.3,-125.3zM102.5,409.5c-2.5,11.8 -3.3,22.7 -3,32.9 37.3,14.2 62.5,13.5 97.5,4.1 -7.2,-10.3 -13,-21 -16.9,-32.3 -32.7,9.4 -55.4,5.7 -77.6,-4.7zM209.1,461.9c-38.1,10.9 -68.8,13.2 -107.5,0.3 1.8,10.4 4.5,20.1 7.5,29.4h130.1c-11.3,-9.8 -21.4,-19.6 -30.1,-29.7z"
+            android:fillColor="#ffffff"
+            android:fillAlpha="1" />
+    </group>
 </vector>
