- add error handling to avoid crashes - make spinners more spinnery - set encounters up front

--- a/app/src/main/res/layout/fragment_hazards.xml
+++ b/app/src/main/res/layout/fragment_hazards.xml
@@ -125,6 +125,9 @@
                 android:id="@+id/category_select"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:editable="false"
+                android:focusable="true"
                 android:hint="@string/hazard_complexity" />
 
         </com.google.android.material.textfield.TextInputLayout>
