--- a/app/src/main/res/layout/fragment_encounters.xml
+++ b/app/src/main/res/layout/fragment_encounters.xml
@@ -9,27 +9,27 @@
         android:id="@+id/encounter_creation_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="4dp">
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/character_information_label"
-        style="@style/Headline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/label_encounter_data"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/character_information_label"
+            style="@style/Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="@string/label_encounter_data"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/character_level_edit_text_layout"
             style="@style/EditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             app:layout_constraintEnd_toStartOf="@id/character_number_edit_text_layout"
-        app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/character_information_label">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -45,10 +45,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/character_number_edit_text_layout"
             style="@style/EditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/character_level_edit_text_layout"
             app:layout_constraintTop_toBottomOf="@id/character_information_label">
 
@@ -65,9 +65,9 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/difficulty_select_layout"
             style="@style/DropDown"
-        android:layout_width="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="@+id/character_level_edit_text_layout"
             app:layout_constraintStart_toStartOf="@id/character_level_edit_text_layout"
             app:layout_constraintTop_toBottomOf="@id/character_level_edit_text_layout">
@@ -76,23 +76,26 @@
                 android:id="@+id/difficulty_select"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:editable="false"
+                android:focusable="true"
                 android:hint="@string/encounter_target_difficulty_label" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/start_button"
-        style="@style/Button.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:enabled="false"
-        android:text="@string/create_encounter"
-        app:icon="@drawable/ic_create"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/difficulty_select_layout"
-        app:layout_constraintBottom_toBottomOf="@id/difficulty_select_layout" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/start_button"
+            style="@style/Button.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:enabled="false"
+            android:text="@string/create_encounter"
+            app:icon="@drawable/ic_create"
+            app:layout_constraintBottom_toBottomOf="@id/difficulty_select_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/difficulty_select_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
