--- a/app/src/main/res/layout/viewholder_danger.xml
+++ b/app/src/main/res/layout/viewholder_danger.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="@dimen/list_item_margin"
         android:layout_marginTop="@dimen/list_item_margin"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/web_button"
+        app:layout_constraintEnd_toStartOf="@id/add_button"
         app:layout_constraintStart_toEndOf="@id/list_item_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Aasimar" />
@@ -38,20 +38,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
         android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toStartOf="@id/web_button"
+        app:layout_constraintEnd_toStartOf="@id/add_button"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
         tools:text="Aasimar" />
 
     <ImageView
-        android:id="@+id/web_button"
+        android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:background="?selectableItemBackgroundBorderless"
         android:padding="16dp"
-        android:src="@drawable/ic_link"
+        android:src="@drawable/ic_add_circle_outline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
