--- a/app/src/main/res/layout/viewholder_encounter_monster.xml
+++ b/app/src/main/res/layout/viewholder_encounter_monster.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/three_line_list_item_height"
-    android:background="?attr/colorSurface"
-
+    android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:elevation="4dp"
     android:focusable="true">
