--- a/app/src/main/res/layout/viewholder_danger.xml
+++ b/app/src/main/res/layout/viewholder_danger.xml
@@ -50,7 +50,10 @@
         android:clickable="true"
         android:focusable="true"
         android:background="?selectableItemBackgroundBorderless"
-        android:padding="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingStart="32dp"
         android:src="@drawable/ic_add_circle_outline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
