--- a/app/src/main/res/layout/fragment_encounter_creator.xml
+++ b/app/src/main/res/layout/fragment_encounter_creator.xml
@@ -113,15 +113,107 @@
             style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/within_budget"
             android:layoutDirection="rtl"
+            android:text="@string/within_budget"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/level_slider" />
 
+
+        <TextView
+            android:id="@+id/danger_type_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/danger_filter_label"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/within_budget_checkbox" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/danger_type_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/danger_type_filter_label">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <TextView
+            android:id="@+id/type_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/label_filter_monster_types"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/danger_type_chips" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/monster_type_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/type_filter_label">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <TextView
+            android:id="@+id/complexity_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/hazard_complexity_encounter_creator"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/complexity_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/complexity_filter_label">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <TextView
+            android:id="@+id/sort_by_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/monster_sort_by"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/complexity_chips" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/sort_by_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/sort_by_label">
+
+        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
