--- a/app/src/main/res/layout/fragment_monster_overview.xml
+++ b/app/src/main/res/layout/fragment_monster_overview.xml
@@ -111,28 +111,51 @@
             app:thumbNumber="2" />
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/type_select_layout"
-            style="@style/DropDown"
-            android:layout_width="match_parent"
-            android:layout_marginTop="8dp"
+        <TextView
+            android:id="@+id/type_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/label_filter_monster_types"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/level_slider" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/monster_type_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/navigate_up"
-            app:layout_constraintTop_toBottomOf="@id/level_slider">
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/type_filter_label">
 
-            <AutoCompleteTextView
-                android:id="@+id/type_select"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:editable="false"
-                android:focusable="true"
-                android:hint="@string/monster_sort_by" />
+        </com.google.android.material.chip.ChipGroup>
 
-        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:id="@+id/sort_by_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/monster_sort_by"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/sort_by_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="4dp"
+            app:layout_constraintTop_toBottomOf="@id/sort_by_label">
+
+        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
