--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,7 @@
         <item name="android:background">@drawable/ic_rounded_bottomsheet</item>
         <item name="android:elevation">16dp</item>
         <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
         <item name="android:paddingBottom">24dp</item>
         <item name="android:outlineProvider">paddedBounds</item>
     </style>
