--- a/app/src/main/res/layout/fragment_encounter_creator.xml
+++ b/app/src/main/res/layout/fragment_encounter_creator.xml
@@ -141,7 +141,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/danger_type_filter_label">
 
         </com.google.android.material.chip.ChipGroup>
@@ -164,7 +164,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/type_filter_label">
 
         </com.google.android.material.chip.ChipGroup>
@@ -187,7 +187,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/complexity_filter_label">
 
         </com.google.android.material.chip.ChipGroup>
@@ -210,7 +210,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/sort_by_label">
 
         </com.google.android.material.chip.ChipGroup>
