--- a/app/src/main/res/layout/fragment_hazards.xml
+++ b/app/src/main/res/layout/fragment_hazards.xml
@@ -127,7 +127,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/complexity_label">
 
         </com.google.android.material.chip.ChipGroup>
@@ -150,7 +150,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/sort_by_label">
 
         </com.google.android.material.chip.ChipGroup>
