--- a/app/src/main/res/layout/fragment_monster_overview.xml
+++ b/app/src/main/res/layout/fragment_monster_overview.xml
@@ -129,7 +129,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/type_filter_label">
 
         </com.google.android.material.chip.ChipGroup>
@@ -152,7 +152,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="4dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
             app:layout_constraintTop_toBottomOf="@id/sort_by_label">
 
         </com.google.android.material.chip.ChipGroup>
