--- a/app/src/main/res/layout/activity_encounter_creator.xml
+++ b/app/src/main/res/layout/activity_encounter_creator.xml
@@ -3,18 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:title="@string/fragment_encounter_creator"
+            app:menu="@menu/main_menu"
+            app:titleTextColor="@color/primaryTextColor"></com.google.android.material.appbar.MaterialToolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/monster_recycler_view"
+        android:id="@+id/encounter_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
         android:orientation="vertical"
-        android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        android:layout_marginBottom="@dimen/bottom_sheet_peek"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         tools:itemCount="5"
         tools:listitem="@layout/viewholder_monster" />
 
@@ -112,6 +132,43 @@
             app:scaleStep="1"
             app:thumbNumber="2" />
 
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/within_budget_checkbox"
+            style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layoutDirection="rtl"
+            android:text="@string/within_budget"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/level_slider" />
+
+
+        <TextView
+            android:id="@+id/danger_type_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/danger_filter_label"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/within_budget_checkbox" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/danger_type_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
+            app:layout_constraintTop_toBottomOf="@id/danger_type_filter_label">
+
+        </com.google.android.material.chip.ChipGroup>
 
         <TextView
             android:id="@+id/type_filter_label"
@@ -121,7 +178,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/label_filter_monster_types"
             app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/level_slider" />
+            app:layout_constraintTop_toBottomOf="@id/danger_type_chips" />
 
 
         <com.google.android.material.chip.ChipGroup
@@ -137,6 +194,29 @@
         </com.google.android.material.chip.ChipGroup>
 
         <TextView
+            android:id="@+id/complexity_filter_label"
+            style="@style/Caption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/hazard_complexity_encounter_creator"
+            app:layout_constraintStart_toStartOf="@id/level_slider_label"
+            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
+
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/complexity_chips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
+            app:layout_constraintTop_toBottomOf="@id/complexity_filter_label">
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <TextView
             android:id="@+id/sort_by_label"
             style="@style/Caption"
             android:layout_width="wrap_content"
@@ -144,7 +224,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/monster_sort_by"
             app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
+            app:layout_constraintTop_toBottomOf="@id/complexity_chips" />
 
 
         <com.google.android.material.chip.ChipGroup
@@ -160,6 +240,5 @@
         </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
