--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="list_item_margin">16dp</dimen>
     <dimen name="list_item_caption_gap">4dp</dimen>
     <dimen name="verticalChipSpacing">4dp</dimen>
+    <dimen name="bottom_nav_height">56dp</dimen>
 </resources>
