--- a/app/src/main/res/layout/viewholder_encounter_budget.xml
+++ b/app/src/main/res/layout/viewholder_encounter_budget.xml
@@ -17,9 +17,8 @@
         android:layout_marginTop="@dimen/list_item_margin"
         android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/random_button"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Aasimar" />
+        tools:text="XP: 90 / 150" />
 
     <TextView
         android:id="@+id/list_item_caption"
@@ -29,9 +28,8 @@
         android:layout_marginTop="@dimen/list_item_caption_gap"
         android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
-        app:layout_constraintEnd_toStartOf="@id/random_button"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
-        tools:text="Difficulty" />
+        tools:text="Level: 5 \u2014 Characters: 4 \u2014 Moderate" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/random_button"
@@ -39,20 +37,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/random_encounter"
+        android:text="Details"
         app:icon="@drawable/ic_random"
-        app:layout_constraintEnd_toStartOf="@id/save_button"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/save_button"
-        style="@style/Button.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/save_encounter"
-        app:icon="@drawable/ic_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:alpha="0.2"
+        android:background="?colorOnSurface" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
