--- a/app/src/main/res/layout/viewholder_encounter_budget.xml
+++ b/app/src/main/res/layout/viewholder_encounter_budget.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="@dimen/list_item_margin"
         android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/save_button"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="XP: 90 / 150" />
 
@@ -27,18 +28,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_item_caption_gap"
         android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@id/save_button"
         app:layout_constraintStart_toStartOf="@id/list_item_title"
         app:layout_constraintTop_toBottomOf="@id/list_item_title"
         tools:text="Level: 5 \u2014 Characters: 4 \u2014 Moderate" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/random_button"
+        android:id="@+id/save_button"
         style="@style/Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Details"
-        app:icon="@drawable/ic_random"
+        android:text="@string/save_encounter"
+        app:icon="@drawable/ic_save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
